--- a/crud-with-react/package.json
+++ b/crud-with-react/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "install": "^0.13.0",
+    "npm": "^11.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
