--- a/MyPortfolio/package.json
+++ b/MyPortfolio/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "i18next": "^25.3.6",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.6.1",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.12"
